--- a/styles.css
+++ b/styles.css
@@ -16,35 +16,28 @@
 body {
     background-color: #f6f5f2;
 }
+.container{
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    min-height: 100vh;
 
+}
 .sidebar {
-
-    box-sizing: border-box;
-    position: absolute;
-    width: 20%;
-    height: 1000px;
-    left: -19px;
-    top: -24px;
-    background: #FFFFFF;
-    border: 1px solid #EBEBEB;
-
-
-
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    height: 100%;
+    background: #FFFFFF;
+    border: 1px solid #EBEBEB;
     padding: 20px;
 }
 
 .brand {
+    height: 20%;
+    width: 80%;
     display: flex;
-    align-items: center;
-    gap: 8px;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 24px;
+    align-content: center;
     margin-top: 36px;
-    margin-left: 35px;
+    justify-content: center;
 }
 
 
@@ -59,17 +52,14 @@ body {
 }
 
 .user-card {
+    display: flex;
     cursor: pointer;
     justify-content: space-between;
-    margin-left: 35px;
-
-    display: flex;
     align-items: center;
     gap: 12px;
     padding: 12px;
     border: 1px solid #e6e6e6;
     border-radius: 10px;
-    margin-bottom: 28px;
 }
 
 .user-card__img {
@@ -89,9 +79,6 @@ body {
     font-family: Spline Sans;
     font-style: SemiBold;
     line-height: 140%;
-    letter-spacing: 0%;
-
-
     font-size: 14px;
     font-weight: 500;
 }
@@ -106,16 +93,11 @@ body {
 }
 
 .nav {
-    margin-left: 35px;
-
     display: flex;
     flex-direction: column;
     gap: 6px;
-    width: 226;
-    height: 22;
-    top: 201px;
-    left: 95px;
     opacity: 1;
+    margin-top: 20px;
 
 }
 
@@ -126,7 +108,6 @@ body {
     font-style: Regular;
     font-size: 16px;
     line-height: 140%;
-    letter-spacing: 0%;
     padding: 10px 12px;
     text-decoration: none;
     color: #626D82;
@@ -166,61 +147,31 @@ body {
 }
 
 .sidebar__bottom {
-    /* Group 27 */
-
-    position: absolute;
-    width: 289px;
-    height: 140px;
-    left: 35px;
+    margin-top: auto;
+    padding: 16px;
+    border-radius: 10px;
+    }
 
 
-
-    padding-top: 20px;
-}
 
 #phone__icon {
-
-    position: absolute;
-    width: 33px;
-    height: 33px;
-    left: 35px;
-    top: 755px;
-
-
+    padding: 10px;
 }
 
 .support__title {
-    width: 289;
-    height: 28;
-    top: 807px;
-    left: 35px;
+    
     opacity: 1;
-
-
-    position: absolute;
-    width: 289px;
-    height: 28px;
-    left: 35px;
-    top: 807px;
-
     font-family: 'Spline Sans';
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
     line-height: 120%;
     color: #1F4451;
-
-
-
     margin-bottom: 6px;
 }
 
 .support__text {
-    position: absolute;
-    width: 276px;
-    height: 53px;
-    left: 35px;
-    top: 844px;
+    
 
     font-family: 'Spline Sans';
     font-style: normal;
@@ -235,11 +186,8 @@ body {
 
 .support__button {
 
-    position: absolute;
     width: 97px;
     height: 34px;
-    left: 35px;
-    top: 913px;
 
     background-color: #1f3b3f;
     color: #ffffff;
@@ -247,6 +195,7 @@ body {
     border-radius: 8px;
     font-size: 13px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 .support__button:hover {
@@ -317,10 +266,12 @@ body {
 .search-icon {
     position: absolute;
     right: 12px;
-    top: 60%;
-    transform: translateY(-50%);
-    font-size: 14px;
+    top: 12px;
     color: #B5BDCD;
+}
+#placeholder_icon{
+    height: 12px;
+    width: 12px;
 }
 
 .table-card {
@@ -431,4 +382,17 @@ td {
     font-size: 18px;
     color: #6b7280;
     cursor: pointer;
+}
+
+.addAndSearch{
+    display: flex;
+    justify-content:center;
+    align-content: center;
+    gap: 50px;
+
+}
+.add-btn{
+    width: 60px;
+    color: #ffffff;
+    background-color: #436D7C;
 }
